Remove comment dropdown menu for non-authenticated users. Remove comment 'reply' button for non-authenticated users. Fix overflow issue when editing image posts on a small screen.

--- a/src/styles/CustomDropdown.module.css
+++ b/src/styles/CustomDropdown.module.css
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+  justify-content: flex-end;
 }
 
 .DropdownToggle:hover,
